# kolko-ni-struva

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  config.ini  config.ini.example  context-atomic.md  file-structure.md  input.md  kolko_ni_struva.session.sql  menu.bat  menu.py  menu.sh  netlify.toml  package-lock.json  patch_grouped.py  pyproject.toml  refresh.bat  refresh.sh  requirements.txt  style.css  task-prompts.md  test_db.py  test_db2.py  test_db_index.py  test_db_name.py  test_db_price.py  trade-chains-nomenclature.json  update-kolko-ni-struva.py  update.sh
.aib_brain/: README.md  run.bat  run.sh  user_guide.html
.aib_memory/: aib-setup.yaml  analysis-R-20260711-0835.md  context.md  input.md  log_R-20260711-0835.md  log_general.md  plan-R-20260518-2256.md  plan-R-20260612-0710.md  plan-R-20260711-0835.md  requests_register.md
.github/: copilot-instructions.md  rdd-copilot-instructions.md  user-prompts-log.md
.netlify/: netlify.toml
.rdd-docs/: folder-structure.md  requirements.md
configs/: README.md
data/: category-nomenclature.json  cities-ekatte-nomenclature.json  trade-chains-nomenclature.json
docs/: analysis-20251104.md  file-structure.md
react-app/: index.html  netlify.toml  package-lock.json  package.json  test_output.txt  vite.config.js
scripts/: README.md  build.sh  refresh-wo-download.sh  refresh.sh  run-site.sh  update.sh
src/: config_utils.py  deploy_netlify.py  download-kolkonistruva.py  extract.py  load_supabase.py  run-site.sh  script.js  transform.py  update-kolko-ni-struva.py  update.sh
tests/: test_config_utils.py  (+6 more)
(+624 files in other folders)
