[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kolko-ni-struva"
version = "0.1.0"
description = "Price analysis and visualization for Bulgarian food products"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.scripts]
kolko-ni-struva = "kolko-ni-struva.cli:main"

[tool.setuptools]
package-dir = {"" = "src/py"}

[tool.setuptools.packages.find]
where = ["src/py"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
